# react-gatsby-flask-cluster-demo

./: README.md  app.yaml  compose.yaml  startserver.bat
.github/workflows/: test-backend.yaml
kubernetes/: webapp.yaml
stock-server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
stock-server/src/: main.py  test.py
stock-server/src/data_handler/: handler.py
stock-server/src/flask_server/: server.py
stock-server/src/flask_server/routes/: delete_reset.py  get_cash.py  get_current_date.py  get_history.py  get_portfolio.py  get_portfolio_value.py  get_price.py  get_stocks.py  post_buy.py  post_progress_time.py  post_sell.py
website/: Dockerfile  gatsby-config.ts  nginx.conf  package-lock.json  package.json
website/src/components/stocks/: StockHandler.ts  stocks.tsx
website/src/components/stocks/partials/: portfolio.tsx  stock-div.tsx  time-buttons.tsx  update-watched-div.tsx
website/src/pages/: index.tsx
website/src/styles/: index.css  stocks.css
